--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -145,6 +145,10 @@
                 line-height: 17px;
                 width: 100%;
                 padding-right: 65px;
+                .view-json{
+                    color: #0D6EFD;
+                    cursor: pointer;
+                }
             }
             .action-links{
                 position: absolute;
