--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -81,9 +81,6 @@
                 }
             }
         }
-        .add_data{
-
-        }
     }
     perfect-scrollbar{
         height: calc(100vh - 192px);
@@ -122,9 +119,12 @@
                 .action-links{
                     display: block;
                 }
-                // .info-link{
-                //     display: none;
-                // }   
+                .info-link{
+                    display: none;
+                }   
+                .indexing{
+                    display: block;
+                }
             }
             .kr-sg-checkbox{
                 position: absolute;
@@ -165,6 +165,42 @@
                 right: 22px;
                 cursor: pointer;
             }
+            .toast-block{
+                background-color: #EAF6EC;
+                height: 38px;
+                width: 82%;
+                padding: 8px 10px;
+                font-size: 12px;
+                z-index: 999 !important;
+                .index_data{
+                    cursor: pointer;
+                    margin-right: 5px;
+                    color: #0D6EFD;
+                }
+                .close{
+                    cursor: pointer;
+                    margin-top:2px;
+                }
+            }
+            .indexing{
+                position: absolute;
+                bottom: 8px;
+                right: 22px;
+                cursor: pointer;
+                display: none;
+            }
+        }
+    }
+
+    .empty_records{
+        .add_data{
+            button{
+                background-color: #0D6EFD;
+                color: #FFFFFF !important;
+            }
+        }
+        .kr-sg-dropdowns .dropdown-open .dropdown-input::before{
+            background-image: url('^assets/icons/carrot-down-white.svg') !important;
         }
     }
 }
