--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -23,7 +23,7 @@
                                     {{collectedRecord.length}} Selected
                                 </div> 
                                 <div class="col-8">
-                                    <button class="reset-but" (click)="resetSelected()">Reset</button>
+                                    <button class="reset-but" (click)="resetCustomization()">Reset</button>
                                 </div> 
                             </div>
                             <div class="kr-sg-checkbox" *ngIf="!resultSelected">
@@ -116,11 +116,11 @@
                                 <div class="row m-0 col-12 p-0">
                                     <div class="col-4 p-0 lef-info">
                                         <div class="approved_title">{{'resultRanking.no._of_customizations_caps' | translate}}</div>
-                                        <div class="approved_date"><span class="time">{{selectedRecord.numberOfCustomisations}}</span></div>
+                                        <div class="approved_date"><span class="time">{{selectedRecord.numberOfCustomisations || '--'}}</span></div>
                                     </div>
                                     <div class="col-4 p-0 lef-info">
                                         <div class="approved_title">{{'resultRanking.last_changes_caps' | translate}}</div>
-                                        <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'DD-MMM-YYYY'}}</span></div>
+                                        <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'DD-MMM-YYYY' || '--'}}</span></div>
                                     </div>
                                     <div class="col-4 p-0 actions-sec">
                                         <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
