--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -89,8 +89,45 @@
         padding: 0 20px 0 45px;
         position: relative;
         .filter-sec{
-
-        }       
+            .filter_text{
+                background: #EFF0F1;
+                border-radius: 2.5px;
+                padding: 6px 10px;
+                color: #202124;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 20px;
+                display: inline-flex;
+                img{
+                    cursor: pointer;
+                }
+            }
+            .filter-title{
+                color: #0D6EFD;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 20px;
+                cursor: pointer;
+            }
+        } 
+        .toast-block-blue{
+            background: #F3F8FF;
+            border: 1px solid #85B7FE;
+            box-sizing: border-box;
+            border-radius: 4px;
+            padding: 10px;
+            max-width: 320px;
+            margin: 0 0 10px auto !important;
+            .info-text{
+                color: #07377F;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 18px;
+            }
+            .close-icon{
+                cursor: pointer;
+            }
+        }      
         .structured-data{
             display: flex;         
             position: relative;            
@@ -165,21 +202,40 @@
                 right: 22px;
                 cursor: pointer;
             }
-            .toast-block{
+            .toast-block{                              
                 background-color: #EAF6EC;
-                height: 38px;
-                width: 82%;
-                padding: 8px 10px;
+                padding: 9px 10px;
                 font-size: 12px;
                 z-index: 999 !important;
+                position: absolute;
+                right: 20px;
+                background: #EAF6EC;
+                border: 1px solid #93D3A2;
+                box-sizing: border-box;
+                border-radius: 4px;
+                display: flex;
+                align-items: center;
+                .successfullyIndex{
+                    img{
+
+                    }
+                }
+                .info-text{
+                    color: #135423;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 18px;
+                }
                 .index_data{
                     cursor: pointer;
-                    margin-right: 5px;
+                    margin-right: 10px;
                     color: #0D6EFD;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 18px;
                 }
-                .close{
+                .close-icon{
                     cursor: pointer;
-                    margin-top:2px;
                 }
             }
             .indexing{
